# holidays_se

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: day_kind.rs  lib.rs  serde.rs
tests/: dates_2020.rs  easter_day_test.rs  iter_2020.rs
