[package]
name = "holidays_se"
version = "0.1.0"
description = "Swedish holidays"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
edition = "2018"
license = "MIT"
categories = [ "localization" ]
keywords = [ "dates", "holidays", "sweden" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.15"
chrono-tz = "0.5.3"
