[package]
name = "holidays_se"
version = "0.3.1"
license = "MIT"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
description = "Swedish holidays"
readme = "README.md"
repository = "https://github.com/nicrgren/holidays_se"
documentation = "https://docs.rs/holidays_se"
edition = "2018"
categories = [ "localization" ]
keywords = [ "dates", "holidays", "sweden" ]


[dependencies]
chrono = "0.4.15"
chrono-tz = "0.5.3"
