[package]
name = "holidays_se"
version = "0.3.1"
license = "MIT"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
description = "Swedish holidays"
readme = "README.md"
repository = "https://github.com/nicrgren/holidays_se"
documentation = "https://docs.rs/holidays_se"
edition = "2018"
categories = [ "localization" ]
keywords = [ "dates", "holidays", "sweden" ]



[features]
default = [ "serde" ]
serde = [ "dep:serde"]

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.6.1"
serde = { version = "1.0.139", optional = true }
thiserror = "1.0.31"

[dev-dependencies]
serde_json = "1"

